app/styles/main.scss
@import "compass_twitter_bootstrap";
@import "compass_twitter_bootstrap_responsive";

$lelylanColor:    #00979D !default;
$typeBorderColor: #DDD !default;
$linkColor:       #00979D !default;
$linkColorHover:  #01cf9e !default;

/*
 * Dashboard (generic)
 */

body {
  background-color: #e8e8e8 !important;
}

.dashboard {
  padding-top: 40px;
}

.dashboard .navbar {
  background-color: #e8e8e8;
}

.nav-list>.active>a, .nav-list>.active>a:hover {
  background-color: $linkColorHover !important;
}

hr {
  border-top: none;
  background-color: transparent;
  border-color: #d8d8d8;
  margin: 15px 0;
}

.dashboard .nav-list .divider {
  background-color: transparent;
  border-color: #d8d8d8;
}

.dashboard .nav-header {
  font-weight: normal;
  font-size: 13px;
}

.dashboard .nav-list {
  padding-left: 0;
}

.dashboard .nav-list li > a {
  text-transform: uppercase;
  font-size: 12px;
}

.dashboard .dashboard-content {
  background-color: #fff;
  min-height: 380px; /* remove and set it with Javascript */
  padding: 20px;
  border: 1px solid #d8d8d8;
}

.dashboard input {
  @include placeholder(#ccc);
}

.dashboard .type h1.name a {
  font-size: 38px;
  font-weight: 700;
}

.dashboard .type h1.name {
  line-height: 20px;
}

.dashboard .type .name a:hover {
  background: url(/images/icon-arrow-right-lg.png) no-repeat left 45%;
  padding-left: 60px;
}

.dashboard a:hover {
  text-decoration: none;
}

.dashboard .type .categories {
  margin-top: 3px;
  font-size: 13px;
}

.dashboard .type .categories ul {
  margin-bottom: 0;
}

.dashboard .type a {
  background-color: transparent;
  padding-right: 0;
  text-transform: uppercase;
}
.dashboard .type .name a {
  //color: #333;
}
.dashboard .type .categories a {
  background-color: transparent;

}
.dashboard .type .name a:hover {
  color: $linkColorHover;
}

.dashboard .alert-block {
  color: #333;
  background-color: #f8f8f8;
  border-color: #e8e8e8;
}

.dashboard .search-query {
  height: 40px;
  width: 400px;
  font-size: 26px;
  line-height: 32px;
  @include border-radius(30px);
}

.navbar .brand {
  padding: 5px 20px 10px !important;
}

.dashboard footer {
  margin-top: 20px;
  padding-right: 2px;
}

// Home

.dashboard .home {
  margin: 10px 0;
}

.dashboard .home h1.title {
  font-size: 82px;
  line-height: 52px;
  text-align: center;
  color: #239cbb;
  font-weight: 200;
  letter-spacing: 4px;
  margin: 30px 0 20px;
}

.dashboard .home h2.subtitle {
  padding: 20px 10px;
  font-size: 36px;
  text-align: center;
  color: #333;
  font-weight: 200;
  line-height: 46px;
}

.dashboard .home .description {
  margin-top: 30px;
  padding: 0px 30px;
}

.dashboard .home p.lead {
  text-align: center;
}

.dashboard .home .ch-grid a:hover,
.dashboard .home .ch-grid a {
  color: #fff;
}

// Circles

.ch-grid {
	margin: 20px 0 0 0;
	padding: 0;
	list-style: none;
	display: block;
	text-align: center;
	width: 100%;
}

.ch-grid:after,
.ch-item:before {
	content: '';
    display: table;
}

.ch-grid:after {
	clear: both;
}

.ch-grid li {
	width: 220px;
	height: 220px;
	display: inline-block;
	margin: 20px;
}

.ch-item {
	width: 100%;
	height: 100%;
	border-radius: 50%;
	position: relative;
	cursor: default;
	box-shadow:
		inset 0 0 0 16px rgba(255,255,255,0.6),
		0 1px 2px rgba(0,0,0,0.1);

	-webkit-transition: all 0.4s ease-in-out;
	-moz-transition: all 0.4s ease-in-out;
	-o-transition: all 0.4s ease-in-out;
	-ms-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
}

.ch-img-1 {
	background-image: url(/images/create.png);
}

.ch-img-2 {
	background-image: url(/images/show.png);
}

.ch-info {
	position: absolute;
	background: rgba(98, 191, 199, 0.8);
	width: inherit;
	height: inherit;
	border-radius: 50%;
	opacity: 0;

	-webkit-transition: all 0.4s ease-in-out;
	-moz-transition: all 0.4s ease-in-out;
	-o-transition: all 0.4s ease-in-out;
	-ms-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;

	-webkit-transform: scale(0);
	-moz-transform: scale(0);
	-o-transform: scale(0);
	-ms-transform: scale(0);
	transform: scale(0);

	-webkit-backface-visibility: hidden;

}

.ch-info h3 {
	color: #fff;
	text-transform: uppercase;
	letter-spacing: 2px;
	font-size: 30px;
	margin: 0 30px;
	padding: 45px 0 0 0;
	height: 140px;
	font-family: 'Open Sans', Arial, sans-serif;
	text-shadow:
		0 0 1px #fff,
		0 1px 2px rgba(0,0,0,0.3);
}

.ch-info p {
	color: #fff;
	padding: 10px 5px;
	font-style: italic;
	margin: 0 30px;
	font-size: 12px;
	border-top: 1px solid rgba(255,255,255,0.5);
	opacity: 0;
	-webkit-transition: all 1s ease-in-out 0.4s;
	-moz-transition: all 1s ease-in-out 0.4s;
	-o-transition: all 1s ease-in-out 0.4s;
	-ms-transition: all 1s ease-in-out 0.4s;
	transition: all 1s ease-in-out 0.4s;
}

.ch-info p a {
	display: block;
	color: #fff;
	color: rgba(255,255,255,0.7);
	font-style: normal;
	font-weight: 700;
	text-transform: uppercase;
	font-size: 9px;
	letter-spacing: 1px;
	padding-top: 4px;
	font-family: 'Open Sans', Arial, sans-serif;
}

.ch-info p a:hover {
	color: #fff222;
	color: rgba(255,242,34, 0.8);
}

.ch-item:hover {
	box-shadow:
		inset 0 0 0 1px rgba(255,255,255,0.1),
		0 1px 2px rgba(0,0,0,0.1);
}
.ch-item:hover .ch-info {
	-webkit-transform: scale(1);
	-moz-transform: scale(1);
	-o-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
	opacity: 1;
}

.ch-item:hover .ch-info p {
	opacity: 1;
}






// Create form type

.dashboard h1.title {
  font-weight: 200;
}


.dashboard .create-view .control-group {
  padding: 3px 0;
}

.dashboard .create-view .type-name input,
.dashboard .create-view .type-description textarea {
  font-size: 26px;
  line-height: 32px;
  margin-bottom: 0;
  font-weight: 200;
}

.dashboard .create-view .type-name input {
  height: 40px;
}

.dashboard .create-view .type-name .add-on,
.dashboard .create-view .type-description .add-on {
  height: 122px;
  width: 100px;
  font-size: 18px;
  padding-top: 10px;
}

.dashboard .create-view .type-name .add-on {
  height: 30px;
  padding-top: 14px;
}
.dashboard .create-view .type-description .add-on {
  height: 122px;
}




// Type component refinements

.type-component .header,
.type-component .header .name,
.type-component .sections .content {
  padding-left: 0 !important;
  padding-top: 0 !important;
  margin-top:0 !important;
}

.type-component .header,
.type-component .sections .content {
  padding: 0px 5px !important;
}

.type-component .sections .header {
  padding-top: 5px !important;
  margin-bottom: 20px !important;
}

